// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regexp parser works for (?:a)+? 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 8,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'symbol': 'Group',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'token': '(',
                      'type': 'token',
                      'text': '('
                    },
                    {
                      'start': 1,
                      'end': 3,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 4,
                      'token': '?:',
                      'type': 'token',
                      'text': '?:'
                    },
                    {
                      'start': 3,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 5,
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 3,
                                  'end': 4,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 4,
                                  'lastColumn': 5,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'a'
                                        }
                                      ],
                                      'ruleIndex': 17
                                    }
                                  ],
                                  'ruleIndex': 16
                                }
                              ],
                              'ruleIndex': 6
                            }
                          ],
                          'ruleIndex': 5
                        }
                      ],
                      'ruleIndex': 3
                    },
                    {
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'token': ')',
                      'type': 'token',
                      'text': ')'
                    },
                    {
                      'start': 5,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 8,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'token': '+',
                              'type': 'token',
                              'text': '+'
                            }
                          ],
                          'ruleIndex': 40
                        },
                        {
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8,
                          'token': 'OPTIONAL',
                          'type': 'token',
                          'text': '?'
                        }
                      ],
                      'ruleIndex': 38
                    }
                  ],
                  'ruleIndex': 8
                }
              ],
              'ruleIndex': 7
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for (?<a>c)b 1`] = `
"{
  'start': 0,
  'end': 8,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 9,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 8,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 9,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 8,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 9,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'symbol': 'Group',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 6,
                      'token': 'namedGroupPrefix',
                      'type': 'token',
                      'text': 'a'
                    },
                    {
                      'start': 5,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 7,
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 5,
                                      'end': 6,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 6,
                                      'lastColumn': 7,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 5,
                                          'end': 6,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 6,
                                          'lastColumn': 7,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'c'
                                        }
                                      ],
                                      'ruleIndex': 17
                                    }
                                  ],
                                  'ruleIndex': 16
                                }
                              ],
                              'ruleIndex': 6
                            }
                          ],
                          'ruleIndex': 5
                        }
                      ],
                      'ruleIndex': 3
                    },
                    {
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8,
                      'token': ')',
                      'type': 'token',
                      'text': ')'
                    }
                  ],
                  'ruleIndex': 9
                }
              ],
              'ruleIndex': 7
            },
            {
              'start': 7,
              'end': 8,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 8,
              'lastColumn': 9,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 7,
                  'end': 8,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 8,
                  'lastColumn': 9,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 7,
                      'end': 8,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 8,
                      'lastColumn': 9,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 7,
                          'end': 8,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 8,
                          'lastColumn': 9,
                          'token': 'char',
                          'type': 'token',
                          'text': 'b'
                        }
                      ],
                      'ruleIndex': 17
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for (a|b)*z 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 8,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Group',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'token': '(',
                      'type': 'token',
                      'text': '('
                    },
                    {
                      'start': 1,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 5,
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 2,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 3,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 1,
                                  'end': 2,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 3,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 1,
                                      'end': 2,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 2,
                                      'lastColumn': 3,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 1,
                                          'end': 2,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 3,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'a'
                                        }
                                      ],
                                      'ruleIndex': 17
                                    }
                                  ],
                                  'ruleIndex': 16
                                }
                              ],
                              'ruleIndex': 6
                            }
                          ],
                          'ruleIndex': 5
                        },
                        {
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4,
                          'token': '|',
                          'type': 'token',
                          'text': '|'
                        },
                        {
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 3,
                                  'end': 4,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 4,
                                  'lastColumn': 5,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'b'
                                        }
                                      ],
                                      'ruleIndex': 17
                                    }
                                  ],
                                  'ruleIndex': 16
                                }
                              ],
                              'ruleIndex': 6
                            }
                          ],
                          'ruleIndex': 5
                        }
                      ],
                      'ruleIndex': 3
                    },
                    {
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'token': ')',
                      'type': 'token',
                      'text': ')'
                    },
                    {
                      'start': 5,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 7,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'token': '*',
                              'type': 'token',
                              'text': '*'
                            }
                          ],
                          'ruleIndex': 39
                        }
                      ],
                      'ruleIndex': 38
                    }
                  ],
                  'ruleIndex': 8
                }
              ],
              'ruleIndex': 7
            },
            {
              'start': 6,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 7,
              'lastColumn': 8,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 6,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 7,
                  'lastColumn': 8,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8,
                          'token': 'char',
                          'type': 'token',
                          'text': 'z'
                        }
                      ],
                      'ruleIndex': 17
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for [^a-z] 1`] = `
"{
  'start': 0,
  'end': 6,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 7,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 7,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 7,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 7,
                          'symbol': 'MatchCharacterClass',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7,
                              'symbol': 'CharacterGroup',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'token': '[',
                                  'type': 'token',
                                  'text': '['
                                },
                                {
                                  'start': 1,
                                  'end': 2,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 3,
                                  'token': '^',
                                  'type': 'token',
                                  'text': '^'
                                },
                                {
                                  'start': 2,
                                  'end': 5,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 3,
                                  'lastColumn': 6,
                                  'symbol': 'CharacterGroupInner',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 2,
                                      'end': 5,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 3,
                                      'lastColumn': 6,
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 2,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 3,
                                          'lastColumn': 6,
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'a'
                                            },
                                            {
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5,
                                              'token': '-',
                                              'type': 'token',
                                              'text': '-'
                                            },
                                            {
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'z'
                                            }
                                          ],
                                          'ruleIndex': 35
                                        }
                                      ],
                                      'ruleIndex': 28
                                    }
                                  ],
                                  'ruleIndex': 26
                                },
                                {
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'token': ']',
                                  'type': 'token',
                                  'text': ']'
                                }
                              ],
                              'ruleIndex': 22
                            }
                          ],
                          'ruleIndex': 18
                        }
                      ],
                      'ruleIndex': 17
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for [a-z] 1`] = `
"{
  'start': 0,
  'end': 6,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 7,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 7,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 7,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 7,
                          'symbol': 'MatchCharacterClass',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7,
                              'symbol': 'CharacterGroup',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'token': '[',
                                  'type': 'token',
                                  'text': '['
                                },
                                {
                                  'start': 1,
                                  'end': 5,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 6,
                                  'symbol': 'CharacterGroupInner',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 1,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 2,
                                      'lastColumn': 5,
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 1,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 5,
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 1,
                                              'end': 2,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 2,
                                              'lastColumn': 3,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'a'
                                            },
                                            {
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4,
                                              'token': '-',
                                              'type': 'token',
                                              'text': '-'
                                            },
                                            {
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'z'
                                            }
                                          ],
                                          'ruleIndex': 35
                                        }
                                      ],
                                      'ruleIndex': 28
                                    },
                                    {
                                      'start': 4,
                                      'end': 5,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 5,
                                      'lastColumn': 6,
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 4,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 5,
                                          'lastColumn': 6,
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': '\\\\b'
                                            }
                                          ],
                                          'ruleIndex': 35
                                        }
                                      ],
                                      'ruleIndex': 28
                                    }
                                  ],
                                  'ruleIndex': 26
                                },
                                {
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'token': ']',
                                  'type': 'token',
                                  'text': ']'
                                }
                              ],
                              'ruleIndex': 22
                            }
                          ],
                          'ruleIndex': 18
                        }
                      ],
                      'ruleIndex': 17
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for \\12\\b 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 6,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 6,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 4,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'token': 'backreference',
                  'type': 'token',
                  'text': '\\\\\\\\12'
                }
              ],
              'ruleIndex': 8
            },
            {
              'start': 3,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 4,
              'lastColumn': 6,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 3,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 4,
                  'lastColumn': 6,
                  'symbol': 'Anchor',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 3,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 6,
                      'token': 'anchorWordBoundary',
                      'type': 'token',
                      'text': '\\\\\\\\b'
                    }
                  ]
                }
              ],
              'ruleIndex': 8
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for ^a+z$ 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'token': '^',
      'type': 'token',
      'text': '^'
    },
    {
      'start': 1,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 6,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 1,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 6,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 1,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 2,
              'lastColumn': 4,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 1,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 2,
                  'lastColumn': 4,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 1,
                      'end': 2,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 3,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 2,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 3,
                          'token': 'char',
                          'type': 'token',
                          'text': 'a'
                        }
                      ],
                      'ruleIndex': 17
                    },
                    {
                      'start': 2,
                      'end': 3,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 3,
                      'lastColumn': 4,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': '+',
                              'type': 'token',
                              'text': '+'
                            }
                          ],
                          'ruleIndex': 40
                        }
                      ],
                      'ruleIndex': 38
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            },
            {
              'start': 3,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 4,
              'lastColumn': 5,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 3,
                  'end': 4,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 4,
                  'lastColumn': 5,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 3,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 5,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'token': 'char',
                          'type': 'token',
                          'text': 'z'
                        }
                      ],
                      'ruleIndex': 17
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            },
            {
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6,
                  'symbol': 'Anchor',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'token': '$',
                      'type': 'token',
                      'text': '$'
                    }
                  ]
                }
              ],
              'ruleIndex': 8
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for a{1,2} 1`] = `
"{
  'start': 0,
  'end': 6,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 7,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 7,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'token': 'char',
                          'type': 'token',
                          'text': 'a'
                        }
                      ],
                      'ruleIndex': 17
                    },
                    {
                      'start': 1,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 7,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 7,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'token': '{',
                              'type': 'token',
                              'text': '{'
                            },
                            {
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': 'int',
                              'type': 'token',
                              'text': '1'
                            },
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'token': ',',
                              'type': 'token',
                              'text': ','
                            },
                            {
                              'start': 4,
                              'end': 5,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 5,
                              'lastColumn': 6,
                              'token': 'int',
                              'type': 'token',
                              'text': '2'
                            },
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'token': '}',
                              'type': 'token',
                              'text': '}'
                            }
                          ],
                          'ruleIndex': 43
                        }
                      ],
                      'ruleIndex': 38
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`regexp parser works for a{1} 1`] = `
"{
  'start': 0,
  'end': 4,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 5,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 4,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 5,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 5,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 5,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 4,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 5,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'token': 'char',
                          'type': 'token',
                          'text': 'a'
                        }
                      ],
                      'ruleIndex': 17
                    },
                    {
                      'start': 1,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 5,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 5,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'token': '{',
                              'type': 'token',
                              'text': '{'
                            },
                            {
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': 'int',
                              'type': 'token',
                              'text': '1'
                            },
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'token': '}',
                              'type': 'token',
                              'text': '}'
                            }
                          ],
                          'ruleIndex': 43
                        }
                      ],
                      'ruleIndex': 38
                    }
                  ],
                  'ruleIndex': 16
                }
              ],
              'ruleIndex': 6
            }
          ],
          'ruleIndex': 5
        }
      ],
      'ruleIndex': 3
    }
  ],
  'ruleIndex': 1
}"
`;
